syntax = "proto3";

package obd.v1;
import "obd/v1/user/entity.proto";
import "obd/v1/car/entity.proto";
import "google/protobuf/timestamp.proto";

message UserLoginRequest {
    string email = 1;
    string password = 2;
}


message UserLoginResponse {
    User user = 1;
    CarView car = 2;
    LoginInfo login_info = 3;
}